file structure and form field for soil data is ready

--- a/public/locales/bn/howTo.json
+++ b/public/locales/bn/howTo.json
@@ -1,10 +1,35 @@
 {
-  "title": "কিভাবে ব্যবহার করবেন",
-  "description": "This page provides a guide on how to use the application effectively.",
-  "steps": [
-    {
-      "stepNumber": 1,
-      "instruction": "Open the application and navigate to the main dashboard."
-    }
-  ]
+  "how_to_use": "কিভাবে আমাদের সিস্টেম ব্যবহার করবেন?",
+  "how_to_use_desc": "চাষিদের জন্য একটি স্মার্ট গাইড — যেটা দরকার সেটা বেছে নিন।",
+  "mode_1_title": "১. পাতার ছবি থেকে রোগ শনাক্ত করুন",
+  "mode_1_subtitle": "ল্যাব বা বিশেষজ্ঞ লাগবে না — শুধু একটা ছবি!",
+  "mode_1_steps": [
+    "পাতার একটি ছবি তুলুন বা আপলোড করুন",
+    "আমাদের AI সাথে সাথে বলবে কোন রোগ হয়েছে",
+    "ব্যস! মাটি বা পরিবেশের তথ্য লাগবে না"
+  ],
+  "mode_1_footer": "ফিল্ডে দ্রুত রোগ চিনতে পারার জন্য সেরা",
+  "mode_1_button": "রোগ শনাক্ত করুন",
+
+  "mode_2_title": "২. মাটি ও পরিবেশ তথ্য দিয়ে চিকিৎসা নিন",
+  "mode_2_subtitle": "রোগ আগে থেকেই জানেন? এবার চিকিৎসা জেনে নিন!",
+  "mode_2_steps": [
+    "রোগের নাম নির্বাচন করুন (ড্রপডাউন থেকে)",
+    "মাটির তথ্য দিন: pH, আর্দ্রতা, তাপমাত্রা, নাইট্রোজেন, ফসফরাস, পটাশিয়াম",
+    "সর্বোত্তম চিকিৎসা পান সাথে সাথে"
+  ],
+  "mode_2_footer": "স্থানীয় মাটি অনুযায়ী সঠিক চাষের জন্য উপযোগী",
+  "mode_2_button": "চিকিৎসা পরামর্শ নিন",
+
+  "mode_3_title": "৩. পূর্ণ ডায়াগনসিস + বুদ্ধিমান চিকিৎসা",
+  "mode_3_subtitle": "সব একসাথে — রোগ শনাক্ত ও চিকিৎসা এক ক্লিকে!",
+  "mode_3_steps": [
+    "পাতার একটি ছবি আপলোড করুন",
+    "মাটি ও পরিবেশের তথ্য দিন",
+    "পান উভয়ই: রোগের নাম এবং সেই অনুযায়ী চিকিৎসা পরিকল্পনা"
+  ],
+  "mode_3_footer": "নতুন ব্যবহারকারীদের জন্য সবচেয়ে উপযোগী",
+  "mode_3_button": "সম্পূর্ণ বিশ্লেষণ শুরু করুন",
+
+  "footer_note": "লগইন লাগবে না। দ্রুত। চাষি-বান্ধব। AI দ্বারা চালিত।"
 }
