soil and treatment suggestion api integration and page build done

--- a/public/locales/en/soil-input.json
+++ b/public/locales/en/soil-input.json
@@ -1,35 +1,32 @@
 {
   "title": "Soil Analysis Form",
-  "subtitle": "Enter soil analysis data for plant recommendations",
-  "temperature": "Temperature",
-  "humidity": "Humidity",
-  "moisture": "Moisture",
-  "soilType": "Soil Type",
+  "subtitle": "Provide soil analysis data for crop-specific recommendations",
   "nitrogen": "Nitrogen",
+  "phosphorus": "Phosphorus",
   "potassium": "Potassium",
-  "phosphorous": "Phosphorous",
-  "fertilizerName": "Fertilizer Name",
+  "ph": "pH",
+  "rainfall": "Rainfall",
+  "temperature": "Temperature",
+  "soilColor": "Soil Color",
+  "crop": "Crop",
   "disease": "Disease",
-  "temperatureDesc": "Soil temperature in Celsius",
-  "humidityDesc": "Air humidity percentage",
-  "moistureDesc": "Soil moisture percentage",
-  "soilTypeDesc": "Type of soil for analysis",
   "nitrogenDesc": "Nitrogen content in soil",
+  "phosphorusDesc": "Phosphorus content in soil",
   "potassiumDesc": "Potassium content in soil",
-  "phosphorousDesc": "Phosphorous content in soil",
-  "fertilizerNameDesc": "Recommended fertilizer type",
-  "diseaseDesc": "Plant disease identification",
-  "temperaturePlaceholder": "Enter temperature (e.g., 29)",
-  "humidityPlaceholder": "Enter humidity (e.g., 52)",
-  "moisturePlaceholder": "Enter moisture (e.g., 45)",
-  "nitrogenPlaceholder": "Enter nitrogen content",
-  "potassiumPlaceholder": "Enter potassium content",
-  "phosphorousPlaceholder": "Enter phosphorous content",
-  "selectSoilType": "Select Soil Type",
-  "selectFertilizer": "Select Fertilizer",
+  "phDesc": "Soil pH level",
+  "rainfallDesc": "Annual rainfall in mm",
+  "temperatureDesc": "Soil temperature in Celsius",
+  "soilColorDesc": "Color of the soil",
+  "cropDesc": "Select the crop to analyze",
+  "diseaseDesc": "Select disease based on crop",
+  "temperaturePlaceholder": "Enter temperature (e.g., 25)",
+  "rainfallPlaceholder": "Enter annual rainfall",
+  "soilColorPlaceholder": "Select soil color",
+  "selectCrop": "Select Crop",
   "selectDisease": "Select Disease",
+  "selectSoilColor": "Select Soil Color",
   "submitForm": "Submit Analysis",
-  "selectField": "Select a field to see details",
+  "selectField": "Select a field",
   "selectFieldDesc": "Choose any field from the left sidebar to configure it",
   "fieldPreview": "Field Preview",
   "fieldProperties": "Field Properties",
@@ -38,45 +35,92 @@
   "placeholder": "Placeholder",
   "whyImportant": "Why is this important?",
   "temperatureImportance": "Soil temperature affects plant growth and nutrient absorption. It helps determine the best planting time and crop selection.",
-  "humidityImportance": "Air humidity influences plant transpiration and disease development. It's crucial for irrigation planning.",
-  "moistureImportance": "Soil moisture content determines irrigation needs and affects root development and nutrient availability.",
-  "soilTypeImportance": "Soil type affects water retention, nutrient availability, and plant root development. It's essential for crop selection.",
+  "rainfallImportance": "Annual rainfall affects water availability for plants and influences irrigation planning.",
+  "soilColorImportance": "Soil color can indicate soil composition and health, affecting plant growth.",
   "nitrogenImportance": "Nitrogen is crucial for leaf growth and chlorophyll production. It's a primary nutrient for plant development.",
+  "phosphorusImportance": "Phosphorus is vital for root development, flowering, and seed formation. It's crucial for plant reproduction.",
   "potassiumImportance": "Potassium helps with disease resistance, drought tolerance, and fruit quality. It's essential for overall plant health.",
-  "phosphorousImportance": "Phosphorous is vital for root development, flowering, and seed formation. It's crucial for plant reproduction.",
-  "fertilizerImportance": "Fertilizer selection depends on soil nutrient deficiencies and crop requirements. It ensures optimal plant nutrition.",
+  "cropImportance": "The correct crop selection based on soil and climatic conditions is important for proper nutrition and growth.",
   "diseaseImportance": "Disease identification helps in selecting appropriate treatment methods and preventing crop loss.",
-  "soilTypes": {
-    "sandy": "Sandy",
-    "loamy": "Loamy",
-    "black": "Black",
-    "red": "Red",
-    "clayey": "Clayey"
+  "soilColors": {
+    "Black": "Black",
+    "Red": "Red",
+    "Dark Brown": "Dark Brown",
+    "Reddish Brown": "Reddish Brown"
   },
-  "fertilizers": {
-    "urea": "Urea",
-    "dap": "DAP",
-    "14-35-14": "14-35-14",
-    "28-28": "28-28",
-    "17-17-17": "17-17-17",
-    "20-20": "20-20",
-    "10-26-26": "10-26-26"
+  "crops": {
+    "Apple": "Apple",
+    "Corn": "Corn (Maize)",
+    "Grape": "Grape",
+    "Mango": "Mango",
+    "Orange": "Orange",
+    "Pepper": "Pepper Bell",
+    "Potato": "Potato",
+    "Rice": "Rice",
+    "Tomato": "Tomato"
   },
   "diseases": {
-    "tomato_target_spot": "Tomato Target Spot",
-    "pepper_bell_healthy": "Pepper Bell Healthy",
-    "tomato_bacterial_spot": "Tomato Bacterial Spot",
-    "pepper_bell_bacterial_spot": "Pepper Bell Bacterial Spot",
-    "tomato_spider_mites": "Tomato Spider Mites",
-    "tomato_early_blight": "Tomato Early Blight",
-    "potato_early_blight": "Potato Early Blight",
-    "tomato_leaf_mold": "Tomato Leaf Mold",
-    "potato_late_blight": "Potato Late Blight",
-    "tomato_yellow_leaf_curl": "Tomato Yellow Leaf Curl Virus",
-    "tomato_septoria": "Tomato Septoria Leaf Spot",
-    "tomato_healthy": "Tomato Healthy",
-    "tomato_mosaic": "Tomato Mosaic Virus",
-    "tomato_late_blight": "Tomato Late Blight",
-    "potato_healthy": "Potato Healthy"
+    "Apple": {
+      "Apple___Apple_scab": "Apple Scab",
+      "Apple___Black_rot": "Black Rot",
+      "Apple___Cedar_apple_rust": "Cedar Apple Rust",
+      "Apple___brown_spot": "Brown Spot",
+      "Apple___healthy": "Healthy"
+    },
+    "Corn": {
+      "Corn_(maize)___Cercospora_leaf_spot_Gray_leaf_spot": "Cercospora Leaf Spot / Gray Leaf Spot",
+      "Corn_(maize)___Common_rust_": "Common Rust",
+      "Corn_(maize)___Northern_Leaf_Blight": "Northern Leaf Blight",
+      "Corn_(maize)___healthy": "Healthy"
+    },
+    "Grape": {
+      "Grape___black_measles": "Black Measles",
+      "Grape___black_rot": "Black Rot",
+      "Grape___healthy": "Healthy",
+      "Grape___leaf_blight": "Leaf Blight"
+    },
+    "Mango": {
+      "Mango___anthracnose": "Anthracnose",
+      "Mango___bacterial_canker": "Bacterial Canker",
+      "Mango___gall_midge": "Gall Midge",
+      "Mango___healthy": "Healthy"
+    },
+    "Orange": {
+      "Orange___citrus_canker": "Citrus Canker",
+      "Orange___citrus_mealybugs": "Citrus Mealybugs",
+      "Orange___die_back": "Die Back",
+      "Orange___foliage_damaged": "Foliage Damaged",
+      "Orange___healthy": "Healthy",
+      "Orange___powdery_mildew": "Powdery Mildew",
+      "Orange___shot_hole": "Shot Hole",
+      "Orange___spiny_whitefly": "Spiny Whitefly"
+    },
+    "Pepper": {
+      "Pepper__bell___Bacterial_spot": "Bacterial Spot",
+      "Pepper__bell___healthy": "Healthy"
+    },
+    "Potato": {
+      "Potato___Early_blight": "Early Blight",
+      "Potato___Late_blight": "Late Blight",
+      "Potato___healthy": "Healthy"
+    },
+    "Rice": {
+      "Rice___bacterial_leaf_blight": "Bacterial Leaf Blight",
+      "Rice___brown_spot": "Brown Spot",
+      "Rice___healthy": "Healthy",
+      "Rice___narrow_brown_spot": "Narrow Brown Spot"
+    },
+    "Tomato": {
+      "Tomato_Bacterial_spot": "Bacterial Spot",
+      "Tomato_Early_blight": "Early Blight",
+      "Tomato_Late_blight": "Late Blight",
+      "Tomato_Leaf_Mold": "Leaf Mold",
+      "Tomato_Septoria_leaf_spot": "Septoria Leaf Spot",
+      "Tomato_Spider_mites_Two_spotted_spider_mite": "Spider Mites / Two Spotted Spider Mite",
+      "Tomato_Target_Spot": "Target Spot",
+      "Tomato__Tomato_YellowLeaf__Curl_Virus": "Yellow Leaf Curl Virus",
+      "Tomato__Tomato_mosaic_virus": "Mosaic Virus",
+      "Tomato_healthy": "Healthy"
+    }
   }
-} 
+}
