all varity of model (leaf,soil and leaf+soil) model predict are integrete done

--- a/public/locales/bn/soil-result.json
+++ b/public/locales/bn/soil-result.json
@@ -6,6 +6,8 @@
     "title": "বিশ্লেষণ ফলাফল",
     "fertilizerLabel": "প্রস্তাবিত সার",
     "treatmentLabel": "চিকিৎসা সুপারিশ",
+    "disease": "অনুমান করা রোগ",
+    "confidenceLabel": "কনফিডেন্স",
     "additionalResults": "অতিরিক্ত ফলাফল",
     "noRecommendation": "কোনো সুপারিশ উপলব্ধ নেই",
     "noTreatment": "কোনো চিকিৎসা সুপারিশ উপলব্ধ নেই",
