--- a/public/locales/en/soil-result.json
+++ b/public/locales/en/soil-result.json
@@ -5,6 +5,8 @@
   "results": {
     "title": "Analysis Results",
     "fertilizerLabel": "Recommended Fertilizer",
+    "disease": "Predicted Disease",
+    "confidenceLabel": "Confidence",
     "treatmentLabel": "Treatment Suggestion",
     "additionalResults": "Additional Results",
     "noRecommendation": "No recommendation available",
