Add localization support for Bengali and English, including new navigation links, error messages, and save functionality for soil analysis results. Implemented GPT explanation feature and updated routing in the app.

--- a/public/locales/bn/common.json
+++ b/public/locales/bn/common.json
@@ -1,3 +1,6 @@
 {
-  "siteName": "প্ল্যান্টগার্ডিয়ান"
+  "siteName": "প্ল্যান্টগার্ডিয়ান",
+  "error": "ত্রুটি",
+  "success": "সফল",
+  "ok": "ঠিক আছে"
 }
