--- a/public/locales/bn/profile.json
+++ b/public/locales/bn/profile.json
@@ -9,5 +9,9 @@
   "emailBtn": "ইমেইল",
   "callBtn": "কল",
   "updateBtn": "প্রোফাইল হালনাগাদ করুন",
-  "aboutText": "{{name}} একজন {{role}} যিনি থাকেন {{city}}, {{state}} এ। এই প্রোফাইল কার্ডটি হিরো সেকশনের মতো একই অ্যানিমেশন ও ভিজ্যুয়াল স্টাইল ব্যবহার করে (গ্রেডিয়েন্ট শিরোনাম, প্যারালাক্স লিফ এবং স্মুথ এন্ট্রান্স), তাই এটি সাইটের বাকি অংশের সাথে সামঞ্জস্যপূর্ণ।"
+  "aboutText": "{{name}} একজন {{role}} যিনি থাকেন {{city}}, {{state}} এ। এই প্রোফাইল কার্ডটি হিরো সেকশনের মতো একই অ্যানিমেশন ও ভিজ্যুয়াল স্টাইল ব্যবহার করে (গ্রেডিয়েন্ট শিরোনাম, প্যারালাক্স লিফ এবং স্মুথ এন্ট্রান্স), তাই এটি সাইটের বাকি অংশের সাথে সামঞ্জস্যপূর্ণ।",
+  "noProfile": {
+    "title": "কোনো প্রোফাইল পাওয়া যায়নি",
+    "message": "আপনার সংরক্ষিত ফলাফল দেখতে দয়া করে লগ ইন করুন"
+  }
 }
