--- a/public/locales/bn/soil-result.json
+++ b/public/locales/bn/soil-result.json
@@ -1,7 +1,6 @@
 {
   "title": "মৃত্তিকা বিশ্লেষণ - ফলাফল",
   "subtitle": "আপনার মৃত্তিকা বিশ্লেষণের ফলাফল এবং সুপারিশসমূহ",
-
   "results": {
     "title": "বিশ্লেষণ ফলাফল",
     "fertilizerLabel": "প্রস্তাবিত সার",
@@ -19,28 +18,32 @@
       "tips": "টিপস"
     }
   },
-
   "inputData": {
     "title": "ইনপুট ডেটা সারাংশ",
     "noData": "কোনো ইনপুট ডেটা উপলব্ধ নেই"
   },
-
   "error": {
     "title": "ত্রুটি",
     "tryAgain": "আবার চেষ্টা করুন"
   },
-
   "buttons": {
     "newAnalysis": "নতুন বিশ্লেষণ",
     "getDetails": "এআই দিয়ে বিশ্লেষণ করুন",
     "gptDetails": "এআই ব্যাখ্যা পান",
-    "generating": "তৈরি হচ্ছে..."
+    "generating": "তৈরি হচ্ছে...",
+    "save": "ফলাফল সংরক্ষণ করুন",
+    "saving": "সংরক্ষণ হচ্ছে..."
   },
   "gptError": {
     "failed": "ব্যাখ্যা পেতে সমস্যা হয়েছে। আবার চেষ্টা করুন।",
     "noExplanation": "কোনো ব্যাখ্যা পাওয়া যায়নি।"
   },
-
+  "save": {
+    "missingSoilForm": "মৃত্তিকা ফর্ম ডেটা অনুপস্থিত। ফলাফল সংরক্ষণ করা যাচ্ছে না।",
+    "savedSoilOnly": "মৃত্তিকা বিশ্লেষণ ফলাফল সফলভাবে সংরক্ষণ করা হয়েছে!",
+    "savedSoilImage": "মৃত্তিকা এবং ছবি বিশ্লেষণ ফলাফল সফলভাবে সংরক্ষণ করা হয়েছে!",
+    "failed": "ফলাফল সংরক্ষণ করতে ব্যর্থ। আবার চেষ্টা করুন।"
+  },
   "fields": {
     "temperature": "তাপমাত্রা",
     "ph": "pH মাত্রা",
