--- a/public/locales/en/navbar.json
+++ b/public/locales/en/navbar.json
@@ -1,7 +1,24 @@
 {
   "links": [
-    { "key": "home", "label": "Home", "url": "/" },
-    { "key": "about", "label": "About", "url": "/about" },
-    { "key": "contact", "label": "Contact", "url": "/contact" }
+    {
+      "key": "home",
+      "label": "Home",
+      "url": "/"
+    },
+    {
+      "key": "about",
+      "label": "About",
+      "url": "/about-us"
+    },
+    {
+      "key": "contact",
+      "label": "Contact",
+      "url": "/contact"
+    },
+    {
+      "key": "search",
+      "label": "Search",
+      "url": "/search"
+    }
   ]
 }
